[b]Version 0.6.9[/b]:

(2010-02-01)
 * Added an option (Options -> Statusbar) to display the video resolution and
   fps in the statusbar.

(2010-01-28)
 * (Experimental) Now the slider seeks again by percentage instead of time, but
   this time the percentage uses fractions so it should be as accurate as
   before, and makes seeking work better when the length reported by mplayer is
   wrong.

(2010-01-20)
 * Now the command line options -close-at-end and -no-close-at-end don't
   modify the preference's option "close when finished playback".
 * Now the command line options -fullscreen and -no-fullscreen don't
   modify the preference's option "start videos in fullscreen".

(2010-01-15)
 * (Linux) Use pulse as default audio output instead of alsa, as alsa is
   causing problems (at least) in Ubuntu 9.10 when seeking on a video (image
   freezes).

(2010-01-10)
 * Fix: the "unicode" encoding for subtitles works now on Windows.

(2009-12-13)
 * Added the possibility to mark an A-B section. When the A-B section has been
   selected only that section will be played. If the option Play->Repeat is 
   enabled, the A-B section will be repeated.
   A new submenu "A-B section" has been added to the "Play" menu, with the
   following options:
     - set A marker
     - set B marker
     - clear A-B markers
     - repeat
   This is exactly how it works: 
    - the "set A marker" option allows to mark the beginning of the section. 
      If the B marker has previously been set, the file will be restarted so 
      the change can take effect.
    - the "set B marker" option allows to mark the end of the section.
      If the A marker has previously been set, the file will be restarted so 
      the change can take effect.
    - the "clear A-B markers" option deletes the A and B markers and restarts
      the playback so the change can take effect. If the A and B markers 
      weren't set, this option does nothing.